// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Position / basic Above 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;Above /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic AboveLeft 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;AboveLeft /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic AboveRight 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;AboveRight /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic Below 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;Below /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic BelowLeft 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;BelowLeft /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic BelowRight 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;BelowRight /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic LeftOf 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;LeftOf /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;

exports[`Storyshots Components | Position / basic RightOf 1`] = `
Array [
  <div
    data-css-5116is=""
  >
    &lt;RightOf /&gt;
  </div>,
  <div
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      data-css-18t2vqu=""
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      The tip
    </div>
  </div>,
]
`;
